# python-textovka

./: .editorconfig  .gitignore  README.md  about.py  adventure.py  backpack.py  command.py  commands.py  config.py  context.py  data.txt  directions.py  exceptions.py  features.py  flow.py  game.py  game_context.py  game_parser.py  gamecontext.py  guess.py  helper.py  helpers.py  item.py  items.py  main.py  models.py  notes.md  oop-game.py  parser.py  pyproject.toml  quit.py  readme.md  requirements.txt  revolver.py  room.py  rooms.py  states.py  usables.py  usages.py  utils.py  (+3 more)
adventure/: commands.py  context.py  game.py  game_context.py  helpers.py  rooms.py  states.py
adventure/commands/: __init__.py  about.py  command.py  commands.py  down.py  drop.py  east.py  examine.py  help.py  inventory.py  load.py  look_around.py  north.py  quit.py  save.py  score.py  south.py  take.py  up.py  use.py  west.py
adventure/items/: __init__.py  car_battery.py  coconut_palm_tree.py  diamond.py  diamond_on_ceiling.py  dictionary.py  (+15 more)
assets/: world.json
commands/: __init__.py  about.py  command.py  commands.py  down.py  drop.py  drop_item.py  east.py  examine.py  examine_item.py  explore.py  help.py  helpers.py  inventory.py  list_of_commands.py  load.py  look_around.py  lookaround.py  north.py  parser.py  quit.py  save.py  south.py  take.py  take_item.py  up.py  use.py  use_item.py  west.py
doc/: 110-program.flow.md  120-game.state.md  200-main.building.blocks.md  210-dataclass.command.md  230-parse.line.md  300-room.representation.md  400-whip.md  410-empty.seats.md  415-items.in.room.md  420-examine.md  430-take.item.md  440-drop.item.md  450-extending.examine.md  460-use.item.md  599-correct.main.md  commands.md  index.md  readme.md
items/: __init__.py  bag.py  branch.py  bucket.py  canister.py  coconut_palm_tree.py  coconutpalmtree.py  coin.py  diamond.py  dictionary.py  door.py  empty_seats.py  features.py  fedora.py  figa.py  fire_extinguisher.py  golden_idol.py  heavy_chest.py  item.py  key.py  luggagedoor.py  map.py  matches.py  mixins.py  nazi_uniform.py  naziuniform.py  newspaper.py  parachute.py  revolver.py  rubberboat.py  sand_pile.py  seats.py  whip.py
rooms/: airplane.py  at_enemy_gate.py  directions.py  free_fall.py  freefall.py  in_plane.py  oasis.py  plane.py  room.py  world.py
src/: hra.py  world.py
tests/: conftest.py  readme.md
textovka/: game.py  game_context.py
(+151 files in other folders)
