[tool.poetry]
name = "textovka"
version = "0.1.0"
description = "Indiana Jones 2 remake written in Python."
authors = ["Miroslav Biňas <miroslav.binas@tuke.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
