[tool.poetry]
name = "adventure"
version = "2024.1"
description = "Project for Python 101 training."
authors = [
    "František Fuka",
    "Miroslav Biňas <miroslav.binas@tuke.sk>"
]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
pytest = "^7.2.0"
faker = "^15.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = []
testpaths = ["tests/"]
python_files = ["test_*.py"]
markers = [
    "wip: work in progress",
]

[tool.poetry.scripts]
indy2 = 'adventure.game:main'
